chore(ui): small updates to UI package entry points

--- a/ui/package.json
+++ b/ui/package.json
@@ -3,8 +3,7 @@
   "version": "2.11.5",
   "description": "Build high-performance VueJS user interfaces (SPA, PWA, SSR, Mobile and Desktop) in record time",
   "type": "module",
-  "main": "dist/quasar.ssr-server.esm.prod.js",
-  "module": "dist/quasar.esm.prod.js",
+  "module": "dist/quasar.ssr-server.esm.prod.js",
   "browser": "dist/quasar.umd.prod.js",
   "unpkg": "dist/quasar.umd.prod.js",
   "jsdelivr": "dist/quasar.umd.prod.js",
