--- a/app-vite/package.json
+++ b/app-vite/package.json
@@ -44,11 +44,11 @@
     "url": "https://donate.quasar.dev"
   },
   "scripts": {
-    "lint": "eslint --ext .js ./ ./bin/quasar --fix --report-unused-disable-directives"
+    "lint": "eslint --ext .js ./ --fix --report-unused-disable-directives"
   },
   "dependencies": {
     "@quasar/fastclick": "1.1.5",
-    "@quasar/vite-plugin": "/Users/razvan/work/@quasar-v2/vite-plugin",
+    "@quasar/vite-plugin": "/Users/razvan/work/v3/vite-plugin",
     "@rollup/pluginutils": "^4.1.2",
     "@types/chrome": "^0.0.210",
     "@types/compression": "^1.7.2",
