--- a/app-webpack/package.json
+++ b/app-webpack/package.json
@@ -49,6 +49,7 @@
   "dependencies": {
     "@quasar/babel-preset-app": "/Users/razvan/work/v3/utils/babel-preset-app",
     "@quasar/fastclick": "1.1.5",
+    "@quasar/render-ssr-error": "^1.0.0",
     "@quasar/ssr-helpers": "/Users/razvan/work/v3/utils/ssr-helpers",
     "@types/chrome": "^0.0.209",
     "@types/compression": "^1.7.2",
@@ -89,11 +90,9 @@
     "node-loader": "2.0.0",
     "null-loader": "4.0.1",
     "open": "8.4.0",
-    "ouch": "^2.0.1",
     "postcss": "^8.4.4",
     "postcss-loader": "7.0.2",
     "postcss-rtlcss": "4.0.1",
-    "pretty-error": "4.0.0",
     "register-service-worker": "1.7.2",
     "sass": "1.32.12",
     "sass-loader": "13.2.0",
